tests/machine/x/hs/string_contains.error

/workspace/mochi/tests/machine/x/hs/string_contains.hs:16:62: error:
    • Couldn't match type: [Char]
                     with: Map.Map String (String -> a0)
      Expected: Map.Map String (String -> a0)
        Actual: String
    • In the second argument of ‘Map.lookup’, namely ‘(s)’
      In the second argument of ‘fromMaybe’, namely
        ‘(Map.lookup "contains" (s))’
      In the first argument of ‘print’, namely
        ‘(fromMaybe (error "missing") (Map.lookup "contains" (s)) "cat")’
   |
16 |   print (fromMaybe (error "missing") (Map.lookup "contains" (s)) "cat")
   |                                                              ^

/workspace/mochi/tests/machine/x/hs/string_contains.hs:17:62: error:
    • Couldn't match type: [Char]
                     with: Map.Map String (String -> a1)
      Expected: Map.Map String (String -> a1)
        Actual: String
    • In the second argument of ‘Map.lookup’, namely ‘(s)’
      In the second argument of ‘fromMaybe’, namely
        ‘(Map.lookup "contains" (s))’
      In the first argument of ‘print’, namely
        ‘(fromMaybe (error "missing") (Map.lookup "contains" (s)) "dog")’
   |
17 |   print (fromMaybe (error "missing") (Map.lookup "contains" (s)) "dog")
   |                                                              ^


Context around line 16:
   14| main :: IO ()
   15| main = do
   16|   print (fromMaybe (error "missing") (Map.lookup "contains" (s)) "cat")
   17|   print (fromMaybe (error "missing") (Map.lookup "contains" (s)) "dog")
   18| 
